--- a/thefunction.ipynb
+++ b/thefunction.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'OBP': 0.439453125}\n"
+      "{'BA': 0.33720930232558138, 'SLG': 0.53255813953488373, 'OBP': 0.439453125, 'wOBA': 0.41648289738430588}\n"
      ]
     }
    ],
@@ -69,6 +69,7 @@
     "\n",
     "walks = ((outcome == 'W') | (outcome==\"I\")).sum()\n",
     "iwalks = ((outcome==\"I\")).sum()\n",
+    "uwalks = ((outcome==\"W\")).sum()\n",
     "singles = (outcome == 'S').sum()\n",
     "doubles = (outcome == \"D\").sum()\n",
     "triples = (outcome == \"T\").sum()\n",
@@ -83,6 +84,22 @@
     "\n",
     "obp = (hits+walks+hbps)/(atbats+walks+hbps+sacs)    \n",
     "vals['OBP'] = obp\n",
+    "\n",
+    "# Batting average\n",
+    "\n",
+    "ba = (hits)/atbats\n",
+    "vals['BA'] = ba\n",
+    "\n",
+    "# SLG\n",
+    "\n",
+    "slg = (singles + 2 * doubles + 3 * triples + 4*hrs)/atbats\n",
+    "vals['SLG'] = slg\n",
+    "\n",
+    "# wOBA\n",
+    "\n",
+    "woba = (.690*uwalks + 0.722*hbps + 0.888*singles + 1.271*doubles + 1.616*triples +\n",
+    "2.101*hrs) / (atbats + walks - iwalks + sacs + hbps)\n",
+    "vals['wOBA'] = woba\n",
     "\n",
     "\n",
     "# other stuff will go here:\n",
